# galleree

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-pages.yml  gallery-uploader-ci.yml  gallery-uploader-release.yml
public/: CNAME  site.json
schemas/: gallery-collection-meta.schema.json  gallery-equipment-meta.schema.json  gallery-image-meta.schema.json
scripts/: generate-gallery-thumbs.mjs
src/: App.css  App.tsx  index.css  vite-env.d.ts
src/components/: CollapsibleFilterSection.tsx  CollectionViewBar.tsx  CollectionsModal.tsx  EquipmentCaptionLink.tsx  EquipmentDetailModal.tsx  Gallery.tsx  GalleryFiltersPanel.tsx  GalleryRow.tsx  GalleryToolbar.tsx  LightboxEquipmentValue.tsx  PhotoLightbox.tsx  PortfolioAbout.tsx  PortfolioFooter.tsx  PortfolioHeader.tsx  PortfolioIntro.tsx  SortOrderBar.tsx  TagBar.tsx  ThemeToggle.tsx
src/hooks/: useCollectionCoverPreload.ts  useGalleryManifest.ts  useImageExif.ts  useSiteConfig.ts
src/lib/: assetCache.ts  collectionDeepLink.ts  collectionSlugs.ts  config.ts  exifDisplay.ts  filenameMeta.ts  galleryCollectionMeta.ts  galleryCollections.ts  galleryEquipmentMeta.ts  galleryJustifiedLayout.ts  galleryLabels.ts  (+13 more)
tools/gallery-uploader/src-tauri/: Cargo.toml  tauri.conf.json
tools/gallery-uploader/src-tauri/icons/: icon.icns
tools/gallery-uploader/src-tauri/src/: lib.rs  main.rs
vite/: galleryCacheHeadersPlugin.ts  galleryManifestPlugin.ts  galleryShareHtml.ts  gallerySharePagesPlugin.ts  sharePageHash.ts  siteHtmlMetaPlugin.ts
(+24 files in other folders)
